Update template to 1.21.5